--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>NewMenumap</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<head>
+		<!-- Compatibility issue -->
+		<%= render 'layouts/shim' %>
 
-<%= yield %>
+		<!-- Meta data for MenuMap -->
+		<title>MenuMap</title>
 
-</body>
+		<!-- js, css assets -->
+		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+		<!-- Security issue -->
+		<%= csrf_meta_tags %>
+	</head>
+	<body>
+
+	<%= yield %>
+
+	</body>
 </html>
