Constuct basic navigation bar and link for home controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
+		<%= render "layouts/header" %>
 
-	<%= yield %>
+		<%= yield %>
 
 	</body>
 </html>
