Add flash layouts on the top and notice#create

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,12 @@
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
+
+		<!-- Navigation -->
 		<%= render "layouts/header" %>
+
+		<!-- Flash -->
+		<%= render "layouts/flash" %>
 
 		<%= yield %>
 
