--- a/app/views/notices/edit.html.erb
+++ b/app/views/notices/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>notice#new</h1>
-<%= render "form" %>
+<h1>notice#edit</h1>
+
+<%= form_for(@notice) do |f| %>
+	<%= render "fields", f: f %>
+	<%= f.submit "gogo" %>
+<% end %>
