--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -1,2 +1,6 @@
 <h1>notice#new</h1>
-<%= render "form" %>
+
+<%= form_for(@notice) do |f| %>
+	<%= render "fields", f: f %>
+	<%= f.submit "gogo" %>
+<% end %>
