Make basic CRUD for question

--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -11,3 +11,4 @@
 	<!-- Each notices in notices/_notice.html.erb -->
 	<%= render @notices %>
 </table>
+<%= link_to "new question", new_question_path %>
