--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,12 @@
 <h1>Questions#show</h1>
-<p>Find me in app/views/questions/show.html.erb</p>
+
+<table>
+	<tr>
+		<th>user_id</th>
+		<th>email</th>
+		<th>contents</th>
+		<th></th>
+	</tr>
+
+	<%= render @question %>
+</table>
