Locate questions#new on the Qna page

--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -11,4 +11,8 @@
 	<!-- Each notices in notices/_notice.html.erb -->
 	<%= render @notices %>
 </table>
-<%= link_to "new question", new_question_path %>
+
+<!-- Show modal for questions#new on click -->
+<%= link_to "new question", "#new_question" %>
+
+<%= render "questions/new" %>
