--- a/app/views/questions/_new.html.erb
+++ b/app/views/questions/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>Questions#new</h1>
 
 <%= form_for(@question) do |f| %>
-	<%= render "fields", f: f %>
+	<%= render "questions/fields", f: f %>
 	<%= f.submit "gogogo" %>
 <% end %>
