--- a/app/views/questions/_fields.html.erb
+++ b/app/views/questions/_fields.html.erb
@@ -1,7 +1,11 @@
-<!-- if current_user then user_id field -->
-<%= f.label :email, "email" %>
-<%= f.text_field :email %>
-<!-- end -->
+<% if current_user %>
+	<%= f.hidden_field :user_id, value: current_user.id %>
+	<%= f.label :email, "email" %>
+	<%= f.text_field :email, value: current_user.email, readonly: true %>
+<% else %>
+	<%= f.label :email, "email" %>
+	<%= f.text_field :email %>
+<% end %>
 
 <%= f.label :contents, "contents" %>
 <%= f.text_field :contents %>
