--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
 		</li>
 	<% else %>
 		<li>
-			<%= link_to "signout page" , destroy_user_session_path(current_user), method: :delete %>
+			<%= link_to "signout page" , destroy_user_session_path, method: :delete %>
 		</li>
 	<% end %>
 </ul>
