--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -2,8 +2,10 @@
 
 <%= form_tag search_path, method: :get, name: nil do %>
 	<%= label_tag :address, "set addr" %>
-	<!-- autocomplete_field_tag(name, value, source, options = {}) -->
-	<!-- autocomplete_field_tag :address, "", addrcomplete_path, { id_element: "#jeongbinelement", placeholder: "gogogoplaceholder"} -->
+	<!--
+	Autocomplete recommended address name with Addrcomplete model 
+	by jquery-ui autocomplete function
+	-->
 	<%= text_field_tag :address %>
 
 	<%= label_tag :category, "category" %>
@@ -20,11 +22,6 @@
 <% end %>
 
 <script>
-/*$('#address').bind('railsAutocomplete.select', function(event, data){*/
-  /* Do something here */
-  /* alert(data.item.id); */
-/*});*/
-
 $(function() {
 	$("#address").autocomplete({
 			source: "/home/addrcomplete",
