--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,12 +1,11 @@
 <h1>Search page</h1>
 
 <%= form_tag search_path, method: :get, name: nil do %>
+	<!-- Autocomplete recommended address name with Addrcomplete model 
+			 by jquery-ui autocomplete function 											 -->
 	<%= label_tag :address, "set addr" %>
-	<!--
-	Autocomplete recommended address name with Addrcomplete model 
-	by jquery-ui autocomplete function
-	-->
-	<%= text_field_tag :address %>
+	<%= text_field_tag :address, nil, 
+							{ id: "addrcomplete", placeholder: "gogo placeholder" } %>
 
 	<%= label_tag :category, "category" %>
 
@@ -20,26 +19,3 @@
 
 	<%= submit_tag "gogogo", name: nil %>
 <% end %>
-
-<script>
-$(function() {
-	$("#address").autocomplete({
-			source: "/home/addrcomplete",
-			minLength: 0,
-			/* autoFocus: false */
-			focus:  function(event, ui){
-								$("#address").val(ui.item.name);
-								return false;
-							},
-			select: function(event, ui){
-								$("#address").val(ui.item.name);
-								return false;
-							}
-		})
-		.data("uiAutocomplete")._renderItem = function(ul, item){
-			return $("<li></li>").data("item.autocomplete", item)
-													 .append("<a>" + item.name + "</a>")
-													 .appendTo(ul);
-		};
-});
-</script>
