Change jquery-ui dependencies from jquery-ui-rails gem to jquery-ui codes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,7 @@
 /*
- *= jquery-ui/autocomplete
+ *= require jquery-ui.structure
+ *= require jquery-ui.theme
+ *= require jquery-ui
  *= require_tree .
  *= require_self
  */
