Make a basic rest_resgisters#create form fields

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,9 @@
 	<li>
 		<%= link_to "search page" , search_path %>
 	</li>
+	<li>
+		<%= link_to "restaurant register" , new_rest_register_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
