--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -1,2 +1,37 @@
 <h1>RestRegisters#new</h1>
-<p>Find me in app/views/rest_registers/new.html.erb</p>
+
+<%= form_for @rest_register do |f| %>
+	<% if current_user %>
+		<%= f.hidden_field :user_id, value: current_user.id %>
+		<%= f.label :email, "email" %>
+		<%= f.text_field :email, value: current_user.email, readonly: true %>
+	<% else %>
+		<%= f.label :email, "email" %>
+		<%= f.text_field :email %>
+	<% end %>
+
+	<%= f.label :name, "restaurant's name" %>
+	<%= f.text_field :name %>
+
+	<!-- options_for_select(options[text, value], selected) -->
+	<%= f.select :cat, 
+				options_for_select(@categories.map{ |c| [c.name, c.name] }, nil), 
+																			{}, { id: "category_select" } %>
+	<%= f.select :subcat, 
+				options_for_select(@subcategories.map{ |s| [s.name, s.name] }, nil),
+																			{}, { id: "subcategory_select" } %>
+
+	<%= f.label :addr, "address" %>
+	<%= f.text_field :addr %>
+	<%= f.label :phnum, "ph number" %>
+	<%= f.text_field :phnum %>
+	<%= f.label :delivery, "delivery option" %>
+	<%= f.check_box :delivery, { class: "gogo_delivery" } %>
+	<%= f.label :open_at, "open timing" %>
+	<%= f.text_field :open_at %>
+	
+	<%= f.label :etc, "etc" %>
+	<%= f.text_area :etc, class: "gogogo", cols: 30, rows: 10 %>
+
+	<%= f.submit "go submit" %>
+<% end %>
