--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -15,10 +15,10 @@
 
 	<!-- options_for_select(options[text, value], selected) -->
 	<%= f.select :category_id, 
-				options_for_select(@categories.map{ |c| [c.name, c.name] }, nil), 
+				options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
 																			{}, { id: "category_select" } %>
 	<%= f.select :subcategory_id, 
-				options_for_select(@subcategories.map{ |s| [s.name, s.name] }, nil),
+				options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
 																			{}, { id: "subcategory_select" } %>
 
 	<%= f.label :addr, "address" %>
