--- a/app/views/rest_registers/show.html.erb
+++ b/app/views/rest_registers/show.html.erb
@@ -1,2 +1,10 @@
 <h1>RestRegisters#show</h1>
-<p>Find me in app/views/rest_registers/show.html.erb</p>
+
+<table>
+	<% @rest_register.attributes.each do |key, value| %>
+		<tr>
+			<td><%= key %></td>
+			<td><%= value %></td>
+		</tr>
+	<% end %>
+</table>
