--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -11,13 +11,7 @@
 	<%= f.label :name, "restaurant's name" %>
 	<%= f.text_field :name %>
 
-	<!-- options_for_select(options[text, value], selected) -->
-	<%= f.select :category_id, 
-				options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
-																			{}, { id: "category_select" } %>
-	<%= f.select :subcategory_id, 
-				options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
-																			{}, { id: "subcategory_select" } %>
+	<%= render "shared/category_select", f: f %>
 
 	<%= f.label :addr, "address" %>
 	<%= f.text_field :addr %>
