--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -11,10 +11,10 @@
 
 	<!-- options_for_select(options[text, value], selected) -->
 	<%= select_tag nil, 
-				options_for_select(@categories.map{ |c| [c.name, c.name] }, nil), 
+				options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
 																					{ id: "category_select" } %>
 	<%= select_tag :category, 
-				options_for_select(@subcategories.map{ |s| [s.name, s.name] }, nil),
+				options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
 																					{ id: "subcategory_select" } %>
 
 	<%= submit_tag "gogogo", name: nil %>
