miscellaneous  - add .swp in .gitignore  - add flash message comment on rest_register#new  - add validations on category_relationship for foreign keys  - remove fog gem  - remove unnecessary method in Subcategory

--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -1,4 +1,8 @@
 <h1>RestRegisters#new</h1>
+<!--
+flash: 더 많이 추가해주세요. 더 정확하고 많은 정보를 제공할수록
+빠르게 추가해드립니다.
+-->
 
 <%= form_for @rest_register, html: { multipart: true } do |f| %>
 	<%= f.label :email, "email" %>
