Add category and subcategory row for reference when editing

--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -4,3 +4,6 @@
 	<%= render "field", f: f %>
 	<%= f.submit "go submit" %>
 <% end %>
+
+<!-- Original category and subcategory -->
+<%= @restaurant.category.name %> | <%= @restaurant.subcategory.name %>
