--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,3 +12,22 @@
 		<td><%= link_to "delete", restaurant_path(@restaurant), method: :delete %>
 	</tr>
 </table>
+
+<h1>RestInfo#show</h1>
+
+<% if !@rest_info.nil? %>
+	<table>
+		<% @rest_info.attributes.each do |key, value| %>
+			<tr>
+				<td><%= key %></td>
+				<td><%= value %></td>
+			</tr>
+		<% end %>
+		<tr>
+			<td><%= link_to "edit", edit_rest_info_path(@rest_info) %></td>
+			<td><%= link_to "delete", rest_info_path(@rest_info), method: :delete %>
+		</tr>
+	</table>
+<% else %>
+	<%= link_to "new rest_info", new_rest_info_path %>
+<% end %>
