Make nested resources for rest_infos

--- a/app/views/rest_infos/edit.html.erb
+++ b/app/views/rest_infos/edit.html.erb
@@ -2,5 +2,9 @@
 
 <%= form_for @rest_info do |f| %>
 	<%= render "field", f: f %>
+
+	<%= f.label :active %>
+	<%= f.check_box :active %>
+
 	<%= f.submit "gogogogogo" %>
 <% end %>
