--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Restaurants#index</h1>
 
-<%= link_to "new", new_restaurant_path %>
+<%= link_to "new restaurant", new_restaurant_path %>
 
 <table>
 	<tr>
