Add RestErr controller & form

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,9 @@
 	<li>
 		<%= link_to "restaurants index" , restaurants_path %>
 	</li>
+	<li>
+		<%= link_to "restaurants errors" , rest_errs_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
