--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,9 @@
 	<li>
 		<%= link_to "restaurants errors" , rest_errs_path %>
 	</li>
+	<li>
+		<%= link_to "menu titles" , menu_titles_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
