--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -15,3 +15,16 @@
 
 <%= render "rest_infos/show" %>
 <%= render "rest_errs/new" %>
+
+<h1>Menu section</h1>
+<table>
+	<tr>
+		<th>title_name</th>
+		<th>title_info</th>
+		<th></th>
+		<th></th>
+	</tr>
+	<%= render @menu_titles %>
+</table>
+
+<%= render "menu_titles/new" %>
