Succeed in polymorphic image upload on RestErr

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,9 @@
 	<li>
 		<%= link_to "menu titles" , menu_titles_path %>
 	</li>
+	<li>
+		<%= link_to "pictures" , pictures_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
