--- a/app/views/rest_errs/_new.html.erb
+++ b/app/views/rest_errs/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>RestErrs#new</h1>
 
-<%= form_for [@restaurant, @rest_err] do |f| %>
+<%= form_for [@restaurant, @rest_err], html: { mutipart: true } do |f| %>
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 
 	<!-- Specify field because of controller subordination -->
