--- a/app/views/rest_errs/edit.html.erb
+++ b/app/views/rest_errs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>RestErrs#edit</h1>
 
-<%= form_for @rest_err do |f| %>
+<%= form_for @rest_err, html: { multipart: true } do |f| %>
 	<%= render "field", f: f %>
 	<%= f.submit "gogo rest_errs#update" %>
 <% end %>
