Make a basic rest_errs#create

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -5,7 +5,8 @@
 <% @pictures.each do |picture| %>
 	<br />
 	<%= picture.id %> |
-	<%= picture.imageable_id %>
+	<%= picture.imageable_id %> |
+	<%= picture.created_at %>
 	<br />
 	<%= image_tag picture.img.url %>
 	<br />
