--- a/app/views/rest_errs/_field.html.erb
+++ b/app/views/rest_errs/_field.html.erb
@@ -17,6 +17,6 @@
 <!-- file_field_tag "img[]", type: :file, multiple: true -->
 <%= f.fields_for :pictures do |ff| %>
 	<%= ff.label :img %>
-	<%= ff.file_field :img, mutiple: true %>
- 	<!-- ff.file_field :img  -->
+	<%= ff.file_field :img %>
+	<!-- ff.file_field :img, multiple: true -->
 <% end %>
