--- a/app/views/rest_errs/_field.html.erb
+++ b/app/views/rest_errs/_field.html.erb
@@ -14,9 +14,9 @@
 <%= f.text_area :etc %>
 
 <%= f.label :pictures %>
-<!-- file_field_tag "img[]", type: :file, multiple: true -->
 <%= f.fields_for :pictures do |ff| %>
 	<%= ff.label :img %>
-	<%= ff.file_field :img %>
-	<!-- ff.file_field :img, multiple: true -->
+	<%= ff.file_field :img, multiple: true %>
+	<%= ff.file_field :img, multiple: true %>
+	<%= ff.file_field :img, multiple: true %>
 <% end %>
