--- a/app/views/rest_errs/show.html.erb
+++ b/app/views/rest_errs/show.html.erb
@@ -10,3 +10,11 @@
 </table>
 
 <%= link_to "edit", edit_rest_err_path(@rest_err) %>
+
+<h1>pictures</h1>
+
+<% @pictures.each do |picture| %>
+	<%= image_tag picture.img.url %>
+	<%= link_to "edit", edit_picture_path(picture) %>
+	<%= link_to "destroy", picture_path(picture), method: :delete %>
+<% end %>
