--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -10,4 +10,7 @@
 	<br />
 	<%= image_tag picture.img.url %>
 	<br />
+	<%= link_to "edit", edit_picture_path(picture) %>
+	<%= link_to "delete", picture_path(picture), method: :delete %>
+	<br />
 <% end %>
