--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -28,3 +28,10 @@
 </table>
 
 <%= render "menu_titles/new" %>
+
+<h1>restaurant.pictures</h1>
+<% @pictures.each do |picture| %>
+	<%= image_tag picture.img.url %>
+	<%= link_to "edit", edit_picture_path(picture) %>
+	<%= link_to "destroy", picture_path(picture), method: :delete %>
+<% end %>
