--- a/app/views/rest_errs/_field.html.erb
+++ b/app/views/rest_errs/_field.html.erb
@@ -16,7 +16,7 @@
 <%= f.label :pictures %>
 <%= f.fields_for :pictures do |ff| %>
 	<%= ff.label :img %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif" %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif" %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif" %>
+	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
+	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
+	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
 <% end %>
