Make index page for Address

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,9 @@
 	<li>
 		<%= link_to "pictures" , pictures_path %>
 	</li>
+	<li>
+		<%= link_to "addresses" , addresses_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
