Make a basic form for AddrRule

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,9 @@
 	<li>
 		<%= link_to "addresses" , addresses_path %>
 	</li>
+	<li>
+		<%= link_to "addr_rules" , addr_rules_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
