Print naver map on page

--- a/app/views/addr_rules/new.html.erb
+++ b/app/views/addr_rules/new.html.erb
@@ -1,5 +1,7 @@
 <h1>AddrRules#new</h1>
 
+<div id="naver_map" style="width: 1000px; heigth: 300px;"></div>
+
 <!-- form_for @addr_rule do |f| -->
 <%= form_for @addr_rule, html: { multipart: true } do |f| %>
 	<%= render "field", f: f %>
