--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
 		<%= yield %>
 
-		<!-- Google Analytics related javascripts -->
-		<%= render "shared/analytics" %>
+		<!-- Callback javascript codes for specific pages -->
+		<%= render "shared/callback_scripts" %>
 	</body>
 </html>
