--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,6 +1,39 @@
 <h1>Addresses#index</h1>
 
 <table>
+	<!-- Address for AddrTag -->
+	<% @addr_tag_categories.each do |category| %>
+		<tr>
+			<td><%= number_with_delimiter(category.id) %></td>
+			<td><%= category.name %></td>
+			<td colspan="6"></td>
+		</tr>
+		<% category.addr_tag(1).each do |subcategory| %>
+			<tr>
+				<td colspan="2"></td>
+				<td><%= number_with_delimiter(subcategory.id) %></td>
+				<td><%= subcategory.name %></td>
+				<td colspan="4"></td>
+			</tr>
+			<% subcategory.addr_tag(2).each do |minicategory| %>
+				<tr>
+					<td colspan="4"></td>
+					<td><%= number_with_delimiter(minicategory.id) %></td>
+					<td><%= minicategory.name %></td>
+					<td colspan="2"></td>
+				</tr>
+				<% minicategory.addr_tag(3).each do |addr_tag| %>
+					<tr>
+						<td colspan="5"></td>
+						<td><%= number_with_delimiter(addr_tag.id) %></td>
+						<td><%= addr_tag.name %></td>
+						<td><%= link_to "show", address_path(addr_tag) %></td>
+					</tr>
+				<% end %>	
+			<% end %>
+		<% end %>
+	<% end %>
+
 	<!-- Seoul -->
 	<tr>
 		<td><%= @seoul.id %></td>
@@ -30,38 +63,6 @@
 				<td><%= admin_dong.name %></td>
 				<td colspan="2"></td>
 			</tr>	
-		<% end %>
-	<% end %>
-
-	<!-- Address for AddrTag -->
-	<% @addr_tag_categories.each do |category| %>
-		<tr>
-			<td><%= number_with_delimiter(category.id) %></td>
-			<td><%= category.name %></td>
-			<td colspan="6"></td>
-		</tr>
-		<% category.addr_tag(1).each do |subcategory| %>
-			<tr>
-				<td colspan="2"></td>
-				<td><%= number_with_delimiter(subcategory.id) %></td>
-				<td><%= subcategory.name %></td>
-				<td colspan="4"></td>
-			</tr>
-			<% subcategory.addr_tag(2).each do |minicategory| %>
-				<tr>
-					<td colspan="4"></td>
-					<td><%= number_with_delimiter(minicategory.id) %></td>
-					<td><%= minicategory.name %></td>
-					<td colspan="2"></td>
-				</tr>
-				<% minicategory.addr_tag(3).each do |addr_tag| %>
-					<tr>
-						<td colspan="6"></td>
-						<td><%= number_with_delimiter(addr_tag.id) %></td>
-						<td><%= addr_tag.name %></td>
-					</tr>
-				<% end %>	
-			<% end %>
 		<% end %>
 	<% end %>
 </table>
