Attach polygon making like callback

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -17,4 +17,7 @@
 
 <script>
 	$(document).on("page:load", loadNaverMap());
+	$(document).ready(function(){
+		oMap.attach("click", setMarker);
+	});
 </script>
