--- a/app/views/addr_rules/new.html.erb
+++ b/app/views/addr_rules/new.html.erb
@@ -9,4 +9,7 @@
 
 <script>
 	$(document).on("page:load", loadNaverMap());
+	$(document).ready(function(){
+		oMap.attach("click", setMarker);
+	});
 </script>
