--- a/app/views/shared/_coordinate_field.html.erb
+++ b/app/views/shared/_coordinate_field.html.erb
@@ -1,2 +1,2 @@
-<%= f.number_field :lat, id: "addr_rule_lat_#{n}", multiple: true, step: "any" %>
-<%= f.number_field :lng, id: "addr_rule_lng_#{n}", multiple: true, step: "any" %>
+<%= f.number_field :lat, id: "coord_lat_#{n}", multiple: true, step: "any" %>
+<%= f.number_field :lng, id: "coord_lng_#{n}", multiple: true, step: "any" %>
