Make a form for addr_conversions

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,9 @@
 	<li>
 		<%= link_to "addr_rules" , addr_rules_path %>
 	</li>
+	<li>
+		<%= link_to "addr_conversions" , addr_conversions_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
