add menu controller

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,9 @@
 		<%= link_to "menu titles" , menu_titles_path %>
 	</li>
 	<li>
+		<%= link_to "menus" , menus_path %>
+	</li> 
+	<li>
 		<%= link_to "pictures" , pictures_path %>
 	</li>
 	<li>
