--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,9 @@
 		<%= link_to "menus" , menus_path %>
 	</li> 
 	<li>
+		<%= link_to "comments" , comments_path %>
+	</li>
+	<li>
 		<%= link_to "pictures" , pictures_path %>
 	</li>
 	<li>
