--- a/app/views/addr_rules/show.html.erb
+++ b/app/views/addr_rules/show.html.erb
@@ -16,5 +16,5 @@
 <script>
 	$(document).on("page:load", loadNaverMap());
 	// Change this to normal data passing codes to js
-	$(document).ready(showMarkers(<%= @coord_array %>));
+	$(document).ready(function(){ showMarkers(<%= @coord_array %>) });
 </script>
