--- a/app/views/menu_titles/_show.html.erb
+++ b/app/views/menu_titles/_show.html.erb
@@ -3,4 +3,7 @@
 	<td><%= menu_title.title_info %></td>
 	<td><%= link_to "edit", edit_menu_title_path(menu_title) %>
 	<td><%= link_to "delete", menu_title_path(menu_title), method: :delete %>
+	<td colspan="4"></td>
+
+	<%= render partial: "menus/show", collection: menu_title.menus, as: :menu %>
 </tr>
