--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,6 +7,7 @@
 		<% end %>
 		<th></th>
 		<th></th>
+		<th></th>
 	</tr>
 
 	<% @comments.each do |title| %>
@@ -17,5 +18,10 @@
 			<td><%= link_to "edit", edit_comment_path(title) %></td>
 			<td><%= link_to "destroy", comment_path(title), method: :delete %></td>
 		</tr>
+		<% title.menus.each do |menu| %>
+			<tr>
+				<td><%= menu.name %></td>
+			</tr>
+		<% end %>
 	<% end %>
 </table>
