--- a/app/views/menus/_new.html.erb
+++ b/app/views/menus/_new.html.erb
@@ -1,8 +1,8 @@
 <h1>Menu#new</h1>
 
-<!-- Should be called by Ajax like menu_titles#edit -->
 <%= form_for [@restaurant, @menu] do |f| %>
-	<!-- %= f.hidden_field :restaurant_id, value: @restaurant.id % -->
+	<%= render "menu_titles/new", f: f %>
+	<br />
 
 	<!-- Specify field because of controller subordination -->
 	<%= render "menus/field", f: f %>
