--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -27,7 +27,7 @@
 	</tr>
 
 	<!-- Collection can pass each related menu_title with :as -->
-	<%= render partial: "menu_titles/show", collection: @restaurant.menu_titles, as: :menu_title %>
+	<%= render partial: "menu_titles/show", collection: @menu_titles, as: :menu_title %>
 </table>
 
 <%= render "menus/new" %>
