--- a/app/views/menu_titles/_show.html.erb
+++ b/app/views/menu_titles/_show.html.erb
@@ -1,9 +1,12 @@
-<tr>
-	<td><%= menu_title.title_name %></td>
-	<td><%= menu_title.title_info %></td>
-	<td><%= link_to "edit", edit_menu_title_path(menu_title) %>
-	<td><%= link_to "delete", menu_title_path(menu_title), method: :delete %>
-	<td colspan="4"></td>
+<div id="menu_title_<%= menu_title.id %>">
+	<%= menu_title.title_name %> |
+	<%= menu_title.title_info %> |
+	<%= link_to "edit", edit_menu_title_path(menu_title) %> |
+	<%= link_to "delete", menu_title_path(menu_title), method: :delete %>
+	<br />
 
-	<%= render partial: "menus/show", collection: menu_title.menus, as: :menu %>
-</tr>
+	<table>
+		<%= render partial: "menus/show", collection: menu_title.menus, as: :menu %>
+	</table>
+</div>
+<br />
