--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -4,6 +4,6 @@
 	<td style="width: 80px;"><%= menu.price %></td>
 	<td style="width: 600px;"><%= menu.info %></td>
 	<td style="width: 20px;"><%= menu.sitga %></td>
-	<td><%= link_to "edit", edit_menu_path(menu) %>
+	<td><%= link_to "edit", edit_menu_path(menu), class: "edit_menu", remote: true %>
 	<td><%= link_to "delete", menu_path(menu), method: :delete %>
 </tr>
