--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -5,5 +5,5 @@
 	<td style="width: 600px;"><%= menu.info %></td>
 	<td style="width: 20px;"><%= menu.sitga %></td>
 	<td><%= link_to "edit", edit_menu_path(menu), class: "edit_menu", remote: true %>
-	<td><%= link_to "delete", menu_path(menu), class: "delete_menu", method: :delete, remote: true %>
+	<td><%= link_to "delete", menu_path(menu), class: "delete_menu", method: :delete, remote: true, data: { confirm: "gogo?" } %>
 </tr>
