Show basic meta titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
 		<!-- Compatibility issue -->
 		<%= render "layouts/shim" %>
 
-		<!-- Meta data for MenuMap -->
-		<title>MenuMap</title>
+		<!-- meta tags -->
+		<%= meta_title %>
 
 		<!-- js, css assets -->
 		<!-- API loading -->
