Add default meta description tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
 		<%= render "layouts/shim" %>
 
 		<!-- meta tags -->
-		<%= meta_title %>
+		<title><%= meta_title %></title>
+		<meta name="description" content="<%= meta_description %>" />
 
 		<!-- js, css assets -->
 		<!-- API loading -->
