--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,6 +43,9 @@
 	<li>
 		<%= link_to "addr_conversions" , addr_conversions_path %>
 	</li>
+	<li>
+		<%= link_to "slangs" , slangs_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
