--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,7 +1,6 @@
 <h1>Comment#new</h1>
 
-<!-- Should be called by Ajax like menu_titles#edit -->
-<%= form_for [@restaurant, @comment] do |f| %>
+<%= form_for([@restaurant, @comment], remote: true) do |f| %>
 	<%= f.hidden_field :restaurant_id, value: @restaurant.id %>
 
 	<!-- Specify field because of controller subordination -->
