--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,4 @@
 $("#new_comment").bind("ajax:success", function() {
+	$("#comment_count").html("<%= @restaurant.comments.count %>");
 	$("#comment_section").html("<%= j(render partial: "comments/show", collection: @restaurant.comments, as: :comment) %>");
 });
