--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -37,6 +37,9 @@
 
 <!-- Comment -->
 <h1>Comment section</h1>
+<div id="comment_count">
+	<%= @restaurant.comments.count %>
+</div> 
 <table>
 	<tr>
 		<th>contents</th>
