Change meta tags logic and pass the test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
 		<%= render "layouts/shim" %>
 
 		<!-- meta tags -->
-		<title><%= meta_title %></title>
-		<meta name="description" content="<%= meta_description %>" />
+		<%= render "layouts/meta_tags" %>
 
 		<!-- js, css assets -->
 		<!-- API loading -->
