--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -21,5 +21,8 @@
 	<%= label_tag :delivery %>
 	<%= check_box_tag :delivery %>
 
+	<%= label_tag :name %>
+	<%= text_field_tag :name %>
+
 	<%= submit_tag "gogogo", name: nil %>
 <% end %>
