--- a/app/views/comments/_page.html.erb
+++ b/app/views/comments/_page.html.erb
@@ -1,12 +1,14 @@
 <table>
 	<tr>
 		<th>contents</th>
+		<th>created at</th>
 		<th></th>
 		<th></th>
 	</tr>
 	<% @comments.each do |comment| %>
 		<tr id="comment_<%= comment.id %>">
 			<td style="width: 340px;"><%= comment.contents %></td>
+			<td><%= time_ago_in_words(comment.created_at) %> 전</td>
 			<td><%= link_to "edit", edit_comment_path(comment), class: "edit_comment", remote: true %></td>
 			<td><%= link_to "delete", comment_path(comment), class: "delete_comment", method: :delete, remote: true, data: { confirm: "gogo?" } %></td>
 		</tr>
