--- a/app/views/comments/_page.html.erb
+++ b/app/views/comments/_page.html.erb
@@ -15,4 +15,5 @@
 	<% end %>
 </table>
 
-<%= will_paginate @comments %>
+<%#= will_paginate @comments %>
+<%= will_paginate @comments, :params => {:controller => "restaurants", :action => "show"} %>
