--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Restaurants#index</h1>
 
+<h2>Map</h2>
+<div id="map_canvas" style="width: 80%; height: 60%"></div>
+
 <%= link_to "new restaurant", new_restaurant_path %>
 
 <%= will_paginate @restaurants %>
@@ -47,4 +50,37 @@
         window.location.href = $(this).data('url');
     });
 	})
+
+	$(document).on("page:load", initialize());
+
+	function initialize(){
+		var oSize = new nhn.api.map.Size(28, 37);
+		var oOffset = new nhn.api.map.Size(14, 37);
+		var oIcon = new nhn.api.map.Icon("https://s3-ap-southeast-1.amazonaws.com/menumap-s3-development/static_assets/images/naver_map_icon.png", oSize, oOffset);
+		var oSeoulNatlSubway = new nhn.api.map.LatLng(37.48121, 126.952712);
+		var defaultLevel = 11;
+    oMap = new nhn.api.map.Map(document.getElementById('map_canvas'), { 
+                                    		point : oSeoulNatlSubway,
+	                                      zoom : defaultLevel,
+	                                      enableWheelZoom : true,
+	                                      enableDragPan : true,
+	                                      enableDblClickZoom : false,
+	                                      mapMode : 0,
+	                                      activateTrafficMap : false,
+	                                      activateBicycleMap : false,
+	                                      minMaxLevel : [ 1, 14 ],
+	                                      size : new nhn.api.map.Size(800, 480)});
+
+    <% @restaurants.each do |restaurant| %>
+    	var lat = <%= restaurant.lat %>;
+    	var lng = <%= restaurant.lng %>;
+    	var restaurant_name = '<%= restaurant.name %>';
+    	var latlng = new nhn.api.map.LatLng(lat, lng);
+    	var oMarker = new nhn.api.map.Marker(oIcon, {point: latlng, title: restaurant_name});
+			var oLabel = new nhn.api.map.MarkerLabel();
+      oMap.addOverlay(oMarker);
+      oMap.addOverlay(oLabel);
+      oLabel.setVisible(true, oMarker);
+    <% end %>
+	};
 </script>
